# sdk-python

./: .gitignore  AGENTS.md  CONTRIBUTING.md  Makefile  README.md  pyproject.toml
.coding-hermes/: tasks.md
.github/workflows/: ci.yml  sync-protocol.yml
.gitreins/: config.yaml
.vfs/graph/: edges.jsonl
scripts/: generate-protocol.py
src/h3_harness/: __init__.py  harness.py  middleware.py  protocol.py  testbed.py
src/h3_harness/examples/: __init__.py  echo.py  langchain_agent.py  minimal.py
tests/: __init__.py  test_harness.py  test_middleware.py  test_protocol.py  test_testbed.py
